Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.9.0
-
8bdf33051aa679db1f060314c6ccab1cb9a77a7a
Description
Upgraded to Qt 5.9 from 5.8. All my ListViews have a pressDelay and onClick never happens for ItemDelegates. This only happens on Android an not PC (iOS not tried).
Removing pressDelay "fixes" the problem.
Can get buttons to click when pressDelay is present if I press with 2 fingers at the same time.
Suspect the new multi-touch support for Buttons is the problem.
Is there a way to disable multi-touch support? I don't need it.
Attachments
Issue Links
- relates to
-
QTBUG-65823 tst_TouchMouse::buttonOnDelayedPressFlickable() is flaky on Win7/mingw
-
- Reported
-
-
QTBUG-69059 [Regression] Fix for QTBUG-61144 reverted in 5.10 and 5.11
-
- Closed
-
- resulted in
-
QTBUG-85607 Flickable delayed-press functionality must resend the same kind of press
-
- Closed
-