Let users disable the multi-touch support

The newly added multi-touch support can create issues, especially
together with Flickable that is unfortunately still not properly
touch-compatible. The implementation is still based on synthesized
mouse events, so things like Flickable::pressDelay that intercepts
mouse presses and re-sends sends them after a delay, does not play
well with touch-enabled controls.

The easiest way we can disable the whole thing is to make multi-
touch support a configurable feature, the same way hover support
is.

  ./configure -no-feature-quicktemplates2-multitouch
  [...]
  Qt Quick Templates 2:
    Hover support .......................... yes
    Multi-touch support .................... no

[ChangeLog][Templates] Added a configure feature for disabling multi-
touch support (configure -no-feature-quicktemplates2-multitouch).

Task-number: QTBUG-61144
Change-Id: I0003ae925c2a499ecb3e2a5b720088bd963d9ad3
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>