src/quicktemplates2/qquickcontrol.cpp
@@ -145,6 +145,7 @@ QQuickControlPrivate::~QQuickControlPrivate()
 #endif
 }
 
+#if QT_CONFIG(quicktemplates2_multitouch)
 bool QQuickControlPrivate::acceptTouch(const QTouchEvent::TouchPoint &point)
 {
     if (point.id() == touchId)
@@ -157,6 +158,7 @@ bool QQuickControlPrivate::acceptTouch(const QTouchEvent::TouchPoint &point)
 
     return false;
 }
+#endif
 
 void QQuickControlPrivate::handlePress(const QPointF &)
 {
@@ -1366,6 +1368,7 @@ void QQuickControl::mouseUngrabEvent()
     d->handleUngrab();
 }
 
+#if QT_CONFIG(quicktemplates2_multitouch)
 void QQuickControl::touchEvent(QTouchEvent *event)
 {
     Q_D(QQuickControl);
@@ -1420,6 +1423,7 @@ void QQuickControl::touchUngrabEvent()
     Q_D(QQuickControl);
     d->handleUngrab();
 }
+#endif
 
 #if QT_CONFIG(wheelevent)
 void QQuickControl::wheelEvent(QWheelEvent *event)
