src/quicktemplates2/qquickcontrol_p_p.h
@@ -78,7 +78,9 @@ public:
         return control->d_func();
     }
 
+#if QT_CONFIG(quicktemplates2_multitouch)
     virtual bool acceptTouch(const QTouchEvent::TouchPoint &point);
+#endif
     virtual void handlePress(const QPointF &point);
     virtual void handleMove(const QPointF &point);
     virtual void handleRelease(const QPointF &point);
