src/quicktemplates2/qquickpopupitem.cpp
@@ -228,6 +228,7 @@ void QQuickPopupItem::mouseUngrabEvent()
     d->popup->mouseUngrabEvent();
 }
 
+#if QT_CONFIG(quicktemplates2_multitouch)
 void QQuickPopupItem::touchEvent(QTouchEvent *event)
 {
     Q_D(QQuickPopupItem);
@@ -239,6 +240,7 @@ void QQuickPopupItem::touchUngrabEvent()
     Q_D(QQuickPopupItem);
     d->popup->touchUngrabEvent();
 }
+#endif
 
 #if QT_CONFIG(wheelevent)
 void QQuickPopupItem::wheelEvent(QWheelEvent *event)
